--- a/views/user/partials/header.hbs
+++ b/views/user/partials/header.hbs
@@ -1,3 +1,6 @@
+
+
+
 <body class="template-blog belle">
 {{!-- <div id="pre-loader">
     <img src="assets/images/loader.gif" alt="Loading..." />
@@ -88,12 +91,12 @@
                             </li>
                             <li class="lvl1 parent megamenu"><a href="/shop">Shop <i class="anm anm-angle-down-l"></i></a>
                             	
-                        <li class="lvl1 parent megamenu"><a href="/cart">Cart <i class="anm anm-angle-down-l"></i></a>
+                        <li class="lvl1 parent megamenu"><a href="/cart" class="cart-button">Cart <i class="anm anm-angle-down-l"></i></a>
                         	
                         </li>
                         <li class="lvl1 parent dropdown"><a href="#">Pages <i class="anm anm-angle-down-l"></i></a>
                           <ul class="dropdown">
-                          	<li><a href="/cart" class="site-nav">Cart Page <i class="anm anm-angle-right-l"></i></a>
+                          	<li><a href="/cart" class="site-nav cart-button" >Cart Page <i class="anm anm-angle-right-l"></i></a>
                                
                             </li>
                            
@@ -125,70 +128,9 @@
                         	<i class="icon anm anm-bag-l"></i>
                             <span id="CartCount" class="site-header__cart-count" data-cart-render="item_count">{{data.count}}</span>
                         </a>
+                        <div id="minicart-container">
                         {{>minicart}}
-                       	{{!-- <!--Minicart Popup-->
-                        <div id="header-cart" class="block block-cart">
-                        	<ul class="mini-products-list">
-                                <li class="item">
-                                	<a class="product-image" href="#">
-                                    	<img src="assets/images/product-images/cape-dress-1.jpg" alt="3/4 Sleeve Kimono Dress" title="" />
-                                    </a>
-                                    <div class="product-details">
-                                    	<a href="#" class="remove"><i class="anm anm-times-l" aria-hidden="true"></i></a>
-                                        <a href="#" class="edit-i remove"><i class="anm anm-edit" aria-hidden="true"></i></a>
-                                        <a class="pName" href="/cart">Sleeve Kimono Dress</a>
-                                        <div class="variant-cart">Black / XL</div>
-                                        <div class="wrapQtyBtn">
-                                            <div class="qtyField">
-                                            	<span class="label">Qty:</span>
-                                                <a class="qtyBtn minus" href="javascript:void(0);"><i class="fa anm anm-minus-r" aria-hidden="true"></i></a>
-                                                <input type="text" id="Quantity" name="quantity" value="1" class="product-form__input qty">
-                                                <a class="qtyBtn plus" href="javascript:void(0);"><i class="fa anm anm-plus-r" aria-hidden="true"></i></a>
-                                            </div>
-                                        </div>
-                                        <div class="priceRow">
-                                        	<div class="product-price">
-                                            	<span class="money">$59.00</span>
-                                            </div>
-                                         </div>
-									</div>
-                                </li>
-                                <li class="item">
-                                	<a class="product-image" href="#">
-                                    	<img src="assets/images/product-images/cape-dress-2.jpg" alt="Elastic Waist Dress - Black / Small" title="" />
-                                    </a>
-                                    <div class="product-details">
-                                    	<a href="#" class="remove"><i class="anm anm-times-l" aria-hidden="true"></i></a>
-                                        <a href="#" class="edit-i remove"><i class="anm anm-edit" aria-hidden="true"></i></a>
-                                        <a class="pName" href="/cart">Elastic Waist Dress</a>
-                                        <div class="variant-cart">Gray / XXL</div>
-                                        <div class="wrapQtyBtn">
-                                            <div class="qtyField">
-                                            	<span class="label">Qty:</span>
-                                                <a class="qtyBtn minus" href="javascript:void(0);"><i class="fa anm anm-minus-r" aria-hidden="true"></i></a>
-                                                <input type="text" id="Quantity" name="quantity" value="1" class="product-form__input qty">
-                                                <a class="qtyBtn plus" href="javascript:void(0);"><i class="fa anm anm-plus-r" aria-hidden="true"></i></a>
-                                            </div>
-                                        </div>
-                                       	<div class="priceRow">
-                                            <div class="product-price">
-                                                <span class="money">$99.00</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                            <div class="total">
-                            	<div class="total-in">
-                                	<span class="label">Cart Subtotal:</span><span class="product-price"><span class="money">$748.00</span></span>
-                                </div>
-                                 <div class="buttonSet text-center">
-                                    <a href="/cart" class="btn btn-secondary btn--small">View Cart</a>
-                                    <a href="/checkout" class="btn btn-secondary btn--small">Checkout</a>
-                                </div>
-                            </div>
                         </div>
-                        <!--End Minicart Popup--> --}}
                     </div>
                     <div class="site-header__search">
                     	<button type="button" class="search-trigger"><i class="icon anm anm-search-l"></i></button>
@@ -224,7 +166,7 @@
         </li>
         	<li class="lvl1 parent megamenu"><a href="/about">Pages <i class="anm anm-plus-l"></i></a>
           <ul>
-          	<li><a href="/cart" class="site-nav">Cart Page <i class="anm anm-plus-l"></i></a>
+          	<li><a href="/cart" class="site-nav cart-button">Cart Page <i class="anm anm-plus-l"></i></a>
                 
             </li>
            
@@ -242,18 +184,39 @@
         </li>
       </ul>
 	</div>
+     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <script>
-document.addEventListener('DOMContentLoaded', async () => {
-  try {
-    const response = await fetch('/cart-count');
-    const data = await response.json();
-    console.log('data', data);
-    const cartCountElement = document.getElementById('CartCount');
-    cartCountElement.textContent = data.count;
-  } catch (error) {
-    console.error('Error fetching cart count:', error);
-  }
-});
+$(document).ready(() => {
+  // Fetch cart count and update the cart count element
+  $.ajax({
+    url: '/cart-count',
+    method: 'GET',
+    success: (data) => {
+      console.log('data', data);
+      $('#CartCount').text(data.count);
+    },
+    error: (xhr, status, error) => {
+      console.error('Error fetching cart count:', error);
+    }
+  });
 
-    </script>
+  // Example of triggering the productAdded event for demo purposes
+  // Remove this part if you have your own mechanism for adding products
+  // and updating the cart count
+  $(document).on('productAdded', () => {
+    $.ajax({
+      url: '/cart-count',
+      method: 'GET',
+      success: (data) => {
+        console.log('data', data)
+        $('#CartCount').text(data.count);
+      },
+      error: (xhr, status, error) => {
+        console.error('Error fetching cart count:', error);
+      }
+    });
+  });
+});
+</script>
+
